Fix: modern - do not wrap ol item counters fixes #1551

--- a/assets/front/scss/0_4_layout/_content.scss
+++ b/assets/front/scss/0_4_layout/_content.scss
@@ -42,6 +42,7 @@ ol {
     content: counters(item, ".") ".";
     counter-increment: item;
     padding-right: .5em;
+    word-wrap: normal;
   }
   @at-root .czr-wp-the-content ol {
     > li {
